src/app/features/wallets/wallets.page.scss
mat-toolbar {
  span {
    padding-right: 40px;
  }
}

.text-black {
  color: black;
}

#pull-to-refresh-help-text {
  margin: 0;
  font-style: normal;
  font-weight: 500;
  font-size: 11px;
  line-height: 10px;
  text-align: center;
  letter-spacing: 0.02em;
  color: #9c9c9c;
}

ion-card {
  background: white;
  border-radius: 15px;
  flex: none;
  order: 0;
  flex-grow: 0;
  margin-top: 5px;
  margin-left: 8px;
  margin-right: 8px;

  ion-grid {
    margin-left: 12px;
    margin-right: 8px;

    h1.balance-text {
      @media (max-width: 360px) {
        font-size: 20px;
      }
    }

    #num-icon-row {
      ion-img {
        margin-top: 10px;
        width: 29px;

        @media (max-width: 360px) {
          width: 20px;
        }
      }

      h3.num-text {
        flex: none;
        order: 1;
        flex-grow: 0;
        margin-top: 21px;
        margin-left: 7px;

        @media (max-width: 360px) {
          font-size: 20px;
        }
      }
    }

    #mainnet-points-row {
      margin-top: 5%;
      padding-left: 2%;

      .mainnet-points {
        letter-spacing: 0.05em;
        font-weight: bold;
        margin-left: 1%;
        transform: translateY(-2);
      }

      ion-icon {
        transform: translateY(0.5px);
        font-size: 1.1em;
        margin-left: 8px;
        margin-right: 5%;
      }

      mat-spinner {
        margin-left: 5%;
        margin-right: 5%;
      }
    }

    #buy-deposit-withdraw-row {
      margin-top: 10px;
    }
  }
}

ion-button {
  --box-shadow: 0;
}

.num-operation-btn {
  --border-radius: 10.4988px;

  margin-bottom: 16px;
  padding-right: 10px;
  min-width: 90px;
}

mat-list {
  padding-top: 0;
  margin: 0 8px;
}

#buy-num-btn {
  color: white;
}

.deposit-withdraw-num-btn {
  color: #626262;
}

#export-integrity-wallet-btn {
  margin: 8px 16px;
}

.info-icon {
  transform: translateY(3px);
  margin-left: 3px;
  font-size: 1.1em;
}

.asset-wallet-qr-code-container {
  // background-color: green;
  max-width: 300px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.qr-code-info {
  text-align: center;
  opacity: 0.6;
  font-size: 12px;
}

.vertical-pacing-12 {
  height: 12px;
}

